temp/objects/Job_Application__c.object
<CustomObject>
    <fields>
        <fullName>Average_Review_Score__c</fullName>
        <formula>IF(Number_of_Reviews__c &lt;&gt; 0, Total_Review_Score__c / Number_of_Reviews__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Review Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Candidate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Candidate</label>
        <referenceTo>Candidate__c</referenceTo>
        <relationshipLabel>Job Applications</relationshipLabel>
        <relationshipName>Job_Applications</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_Job_Application_Number__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Job Application Number</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Number_of_Reviews__c</fullName>
        <label>Number of Reviews</label>
        <summaryForeignKey>Review__c.Job_Application__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Position</label>
        <referenceTo>Position__c</referenceTo>
        <relationshipLabel>Job Applications</relationshipLabel>
        <relationshipName>Job_Applications</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Review_Indicator__c</fullName>
        <formula>IF(Average_Review_Score__c &gt;= 3.5,IMAGE(&quot;/img/samples/light_green.gif&quot;, &quot;Green&quot;),IF(Average_Review_Score__c &gt;= 2.5,IMAGE(&quot;/img/samples/light_yellow.gif&quot;, &quot;Yellow&quot;),IF(Average_Review_Score__c &gt; 0,IMAGE(&quot;/img/samples/light_red.gif&quot;, &quot;Red&quot;),&quot;No Reviews&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Review Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Phone Screen</fullName>
                </value>
                <value>
                    <fullName>Schedule Interviews</fullName>
                </value>
                <value>
                    <fullName>Interviews Completed</fullName>
                </value>
                <value>
                    <fullName>Offer Extended</fullName>
                </value>
                <value>
                    <fullName>Closed - Rejected</fullName>
                </value>
                <value>
                    <fullName>Closed - Accepted</fullName>
                </value>
                <value>
                    <fullName>Closed - Declined</fullName>
                </value>
                <value>
                    <fullName>Closed - Position Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Review_Score__c</fullName>
        <label>Total Review Score</label>
        <summarizedField>Review__c.Overall_Review_Score__c</summarizedField>
        <summaryForeignKey>Review__c.Job_Application__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Job Application</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>APP-{00000}</displayFormat>
        <label>Job Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Applications</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>